--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,10 +19,10 @@ server.tomcat.max-http-form-post-size=-1
 file.upload.video-dir=uploads/videos
 file.upload.image-dir=uploads/images
 
-spring.mail.host=smtp-relay.brevo.com
+spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=vihangatd99@gmail.com
-spring.mail.password=jpdhkblpymzvcgja
+spring.mail.username={EMAIL}
+spring.mail.password={PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
