--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,8 +21,8 @@ file.upload.image-dir=uploads/images
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username={EMAIL}
-spring.mail.password={PASSWORD}
+spring.mail.username=${EMAIL}
+spring.mail.password=${PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
