--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,4 +32,4 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 
 app.frontend.url=http://localhost:4200
 
-#jwt.secret=secretKey
+jwt.secret=${SECRETKEY}
